--- a/gradle.properties
+++ b/gradle.properties
@@ -316,3 +316,6 @@ xmlApisVersion=1.0.b2
 
 # sync with Tika/POI
 xmlbeansVersion=5.1.1
+
+# Force snappy-java version for CVE-2023-43642
+snappyJavaVersion=1.1.10.4
