force snappy java to 1.1.10.4 for CVE-2023-43642 (#578)
* force snappy-java version for CVE-2023-43642

* move snappy-java to alphabetical placement

* Update build.gradle comment

Co-authored-by: Adam Rauch <adam@labkey.com>

---------

Co-authored-by: Adam Rauch <adam@labkey.com>

--- a/build.gradle
+++ b/build.gradle
@@ -304,6 +304,9 @@ allprojects {
                     // Force consistency between pipeline's ActiveMQ  and cloud's jClouds dependencies
                     force "javax.annotation:javax.annotation-api:${javaxAnnotationVersion}"
 
+                    // Force snappy-java version for CVE-2023-43642. Remove once HTSJDK bumps its preferred version.
+                    force "org.xerial.snappy:snappy-java:${snappyJavaVersion}"
+
                     dependencySubstitution {
                         // Because the client api artifact name is not the same as the directory structure, we use
                         // Gradle's dependency substitution so the dependency will appear correctly in the pom files that
