--- a/gradle.properties
+++ b/gradle.properties
@@ -136,7 +136,7 @@ commonsMath3Version=3.6.1
 commonsPoolVersion=1.6
 commonsTextVersion=1.12.0
 commonsValidatorVersion=1.9.0
-commonsVfs2Version=2.7.0
+commonsVfs2Version=2.9.0
 
 datadogVersion=1.39.1
 
@@ -246,6 +246,9 @@ mysqlDriverVersion=9.0.0
 nettyVersion=4.1.113.Final
 
 objenesisVersion=1.0
+
+# Force patched version of okhttp for CVE-2021-0341 and CVE-2023-0833
+okhttpVersion=4.12.0
 
 # increase from 2.0 for remoteclientapi/java
 opencsvVersion=2.3
